--- a/index.html
+++ b/index.html
@@ -144,52 +144,52 @@
 </div>
 <div id="foodContainer" class="food-grid">
     <div class="food-item">
-        <img src="images/pizza.jpg" alt="Pizza">
+        <img src="pizza.jpg" alt="Pizza">
         <h3>Pizza</h3>
         <p>₹299</p>
     </div>
     <div class="food-item">
-        <img src="images/burger.jpg" alt="Burger">
+        <img src="burger.jpg" alt="Burger">
         <h3>Burger</h3>
         <p>₹149</p>
     </div>
     <div class="food-item">
-        <img src="images/pasta.jpg" alt="Pasta">
+        <img src="pasta.jpg" alt="Pasta">
         <h3>Pasta</h3>
         <p>₹199</p>
     </div>
     <div class="food-item">
-        <img src="images/idly.jpg" alt="Idly">
+        <img src="idly.jpg" alt="Idly">
         <h3>Idly</h3>
         <p>₹99</p>
     </div>
     <div class="food-item">
-        <img src="images/dosa.jpg" alt="Dosa">
+        <img src="dosa.jpg" alt="Dosa">
         <h3>Dosa</h3>
         <p>₹100</p>
     </div>
     <div class="food-item">
-        <img src="images/biryani.jpg" alt="Biryani">
+        <img src="biryani.jpg" alt="Biryani">
         <h3>Biryani</h3>
         <p>₹299</p>
     </div>
     <div class="food-item">
-        <img src="images/butterchicken.jpg" alt="Butter Chicken">
+        <img src="butterchicken.jpg" alt="Butter Chicken">
         <h3>Butter Chicken</h3>
         <p>₹179</p>
     </div>
     <div class="food-item">
-        <img src="images/noodles.jpg" alt="Noodles">
+        <img src="noodles.jpg" alt="Noodles">
         <h3>Noodles</h3>
         <p>₹199</p>
     </div>
     <div class="food-item">
-        <img src="images/samosa.jpg" alt="Samosa">
+        <img src="samosa.jpg" alt="Samosa">
         <h3>Samosa</h3>
         <p>₹49</p>
     </div>
     <div class="food-item">
-        <img src="images/cake.jpg" alt="Cake">
+        <img src="cake.jpg" alt="Cake">
         <h3>Cake</h3>
         <p>₹249</p>
     </div>   
